  - adds new views to several modules
    -- new 'headline' view to filedownloads module
    -- new 'toggle' and 'accordion' views to the text module
    -- new 'toggle' view to the portfolio module
    -- new 'flyout sidebar' view to navigation module for hard-coding in themes
    -- new 'vertical' login view
  - adds new 'multi-add' feature to create multiple photo album items in one easy step
  - adds new 'inline' view to edit text module items directly on page via CKEditor v4
  - adds custom module phrase translation libraries feature
  - merges module 'Configure Actions & Views' and 'Configure Settings' into a single view for easy module configuration
  - adds a mass mailer for super admins to email all users or selected site users
  - adds new site configuration setting to reverse the default logic of when module titles are displayed
  - updates file manager with 'virtual folder' grouping and date features to assist locating files
    -- also adds file manager bulk selection (add multiple files to an item all at once) and bulk delete
  - updates file uploader to allow html5 drag/drop support and some other user-friendly features
    -- images may be resized to a max width and files assigned to a virtual folder during upload

Added / Fixed / changed for 2.1.0
-----------------------
# This release focuses on new calendar module and a 'mega' menu
  - adds optional nested comments, and optional per-item comment disabling
  - adds optional comments to filedownload module items
  - adds optional external file url for file download item
  - removes extra themes to reduce size of package, available as separate addon downloads
  - adds version change information to initial upgrade page
  - adds optional color/style to categories
  - upgrades calendar to a 2.0 event controller with categories & tags
    -- optionally upgrades and converts existing calendars
    -- adds color-coded categories and tags