@@ -28,9 +28,9 @@
                 <div id="tab1">
                     <h2>{'File Download'|gettext}</h2>
                     {control type=text name=title label="Title"|gettext value=$record->title}
-                    {control id="downloadable" type="files" name="downloadable" label="File for Download"|gettext subtype=downloadable value=$record->expFile limit=1}
-                    {control type=text name=ext_file label="External File URL"|gettext value=$record->ext_file}
-                    {control id="preview" type="files" name="preview" label="Preview Image to display with above 'File'"|gettext subtype=preview value=$record->expFile limit=1}
+                    {control id="downloadable" type="files" name="downloadable" label="Files for Download"|gettext subtype=downloadable value=$record->expFile description='First file is the primary download.'|gettext}
+                    {control type=text name=ext_file label="External File URL"|gettext value=$record->ext_file descripton='A download link on another server used instead of Files above.'|gettext}
+                    {control id="preview" type="files" name="preview" label="Preview Image to display"|gettext subtype=preview value=$record->expFile limit=1}
                     {control type=html name=body label="Description"|gettext value=$record->body}
                     {if !$config.disabletags}
                         {control type="tags" value=$record}
