@@ -30,7 +30,7 @@
             {if $file->ext_file}
                 <a class=downloadfile href="{$file->ext_file}" title="{'Download'|gettext}" target="_blank">{$file->title}</a>
             {else}
-                {icon action=downloadfile fileid=$file->id text=$file->title title="{'Download'|gettext}"}
+                {icon action=downloadfile fileid=$file->id filenum=0 text=$file->title title="{'Download'|gettext}"}
             {/if}
         </h3>
     {else}
@@ -97,11 +97,11 @@
         {if $file->ext_file}
             <a class=downloadfile href="{$file->ext_file}" title="{'Download'|gettext}" target="_blank">{'Download'|gettext}</a>
         {else}
-            {icon action=downloadfile fileid=$file->id text='Download'|gettext}
+            {icon action=downloadfile fileid=$file->id filenum=0 text='Download'|gettext}
         {/if}
     {/if}
     {clear}
-    {if $config.show_player && ($filetype == "mp3" || $filetype == "flv" || $filetype == "f4v")}
+    {if $config.show_player && !$file->ext_file && ($filetype == "mp3" || $filetype == "flv" || $filetype == "f4v")}
         <a href="{$file->expFile.downloadable[0]->url}" style="display:block;width:360px;height:{if $filetype == "mp3"}26{else}240{/if}px;" class="filedownload-media">
             {if $file->expFile.preview[0] != ""}
                 {img class="preview-img" file_id=$file->expFile.preview[0]->id w=360 h=240 zc=1}
